unpackaged/main/default/objects/Account/fields/aaTestField__c.field-meta.xml
<CustomField>
    <fullName>aaTestField__c</fullName>
    <label>aaTestField</label>
    <length>225</length>
    <type>Text</type>
</CustomField>