unpackaged/main/default/objects/Account/fields/NewField__c.field-meta.xml
<CustomField>
    <fullName>NewField__c</fullName>
    <label>NewField</label>
    <length>225</length>
    <type>Text</type>
</CustomField>