unpackaged/main/default/objects/Account/fields/sampleField__c.field-meta.xml
<CustomField>
    <fullName>sampleField__c</fullName>
    <label>sampleField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>